# asisaocr

./: .gitignore  main.pdfplumber.py  main.py  pyproject.toml
rpa/RPA Evaluaciones Objetivas/: constants.py  eactivity.py  excel_runner.py  generar_informe.py  main.py
rpa/RPA RATs/: RAT.7z  constants.py  cookies.pkl  etreatment_runner.py  excel_runner.py  generar_informe.py  login.py  main.py
src/: errors.py  pruebas.py  utils.py
src/model/: model.py
src/model/models/: AARR_html_model.py  AARR_model.py  PIA_model.py  RAT_model.py
src/model/parsers/: excel_model_parser.py  html_model_parser.py  pdf_model_parser.py
src/model/readers/: file_model_reader.py
src/model/validators/: validator.py
src/model/writers/: excel_writer.py
templates/: AARR_Modelo de datos_template.xlsx  PIA_Modelo de datos_template.xlsx  RAT_Modelo de datos_template.xlsx  ~$AARR_Modelo de datos_template.xlsx
